5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1723_2503.log
== TEST (2019-05-13 17:49:17) 
-- CODE:
n = int(input("Numero de termos:"))

h = 0
x = 1
y = 0
f = 1

while(h < n):
	pi = 4/x + y
	x = x + 2
	y = y + (4/x)*(-1**f)
	h = h + 1
	print(pi)
	
-- OUTPUT:
4.0
0.0
-1.3333333333333333
-2.1333333333333337
-2.704761904761905
-3.1492063492063496
-3.5128427128427138
-3.8205350205350213
-4.087201687201688
-4.322495804848747
-4.53302212063822
-4.723498311114411
-4.897411354592672
-5.057411354592672
-5.20555950274082
-5.343490537223579
-5.472522795288095
-5.593734916500216
-5.70802063078593
-5.8161287388940375
-5.91869284145814
-6.016253817067896
-6.1092770728818495
-6.198165961770738
-6.283272344749461
-6.364904997810686
-6.443336370359705
-6.518808068472913
-6.591535341200185
-6.661710779796676
-6.729507389966168
-6.795081160457971
-6.858573223950034
-6.920111685488496
-6.979813178025809
-7.037784192518563
-7.094122220687577
-7.148916741235523
-7.202250074568856
-7.254198126516908
-7.304831037909313
-7.354213753958696
-7.402406525043033
-7.449465348572445
-7.495442360066698
-7.540386180291417
-7.584342224247461
-7.627352976935633
-7.669458240093528
-7.7106953534955895
-7.75109939389963
-7.79070335429567
-7.8295383057519805
-7.8676335438472185
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:49:34) 
-- CODE:
n = int(input("Numero de termos:"))

h = 0
x = 1
y = 0
f = 1

while(h < n):
	pi = 4/x + y
	x = x + 2
	y = y + (4/x)*(-1**f)
	h = h + 1
	print(pi)
	
-- OUTPUT:
4.0
0.0
-1.3333333333333333
-2.1333333333333337
-2.704761904761905
-3.1492063492063496
-3.5128427128427138
-3.8205350205350213
-4.087201687201688
-4.322495804848747
-4.53302212063822
-4.723498311114411
-4.897411354592672
-5.057411354592672
-5.20555950274082
-5.343490537223579
-5.472522795288095
-5.593734916500216
-5.70802063078593
-5.8161287388940375
-5.91869284145814
-6.016253817067896
-6.1092770728818495
-6.198165961770738
-6.283272344749461
-6.364904997810686
-6.443336370359705
-6.518808068472913
-6.591535341200185
-6.661710779796676
-6.729507389966168
-6.795081160457971
-6.858573223950034
-6.920111685488496
-6.979813178025809
-7.037784192518563
-7.094122220687577
-7.148916741235523
-7.202250074568856
-7.254198126516908
-7.304831037909313
-7.354213753958696
-7.402406525043033
-7.449465348572445
-7.495442360066698
-7.540386180291417
-7.584342224247461
-7.627352976935633
-7.669458240093528
-7.7106953534955895
-7.75109939389963
-7.79070335429567
-7.8295383057519805
-7.8676335438472185
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:49:59) 
-- CODE:
n = int(input("Numero de termos:"))

h = 0
x = 1
y = 0
f = 1

while(h < n):
	pi = 4/x + y
	x = x + 2
	y = (4/x)*(-1**f)
	h = h + 1
	print(pi)
	
-- OUTPUT:
4.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:50:39) 
-- CODE:
n = int(input("Numero de termos:"))

h = 0
x = 3
y = 0
f = 1

while(h < n):
	pi = 4/1 + y
	x = x + 2
	y = (4/x)*(-1**f)
	h = h + 1
	print(pi)
	
-- OUTPUT:
4.0
3.2
3.428571428571429
3.5555555555555554
3.6363636363636362
3.6923076923076925
3.7333333333333334
3.764705882352941
3.7894736842105265
3.8095238095238093
3.8260869565217392
3.84
3.851851851851852
3.8620689655172415
3.870967741935484
3.878787878787879
3.8857142857142857
3.891891891891892
3.8974358974358974
3.902439024390244
3.9069767441860463
3.911111111111111
3.9148936170212765
3.9183673469387754
3.9215686274509802
3.9245283018867925
3.9272727272727272
3.9298245614035086
3.9322033898305087
3.9344262295081966
3.9365079365079367
3.9384615384615387
3.9402985074626864
3.9420289855072466
3.943661971830986
3.9452054794520546
3.9466666666666668
3.948051948051948
3.949367088607595
3.950617283950617
3.9518072289156625
3.9529411764705884
3.954022988505747
3.955056179775281
3.956043956043956
3.956989247311828
3.957894736842105
3.9587628865979383
3.95959595959596
3.9603960396039604
3.9611650485436893
3.961904761904762
3.9626168224299065
3.963302752293578
3.963963963963964
3.9646017699115044
3.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:51:20) 
-- CODE:
n = int(input("Numero de termos:"))

h = 0
x = 1
y = 0
f = 1

while(h < n):
	pi = 4/x + y
	x = x + 2
	y = y + (4/x)*(-1**f)
	h = h + 1
	f = f + 1
	print(pi)
	
-- OUTPUT:
4.0
0.0
-1.3333333333333333
-2.1333333333333337
-2.704761904761905
-3.1492063492063496
-3.5128427128427138
-3.8205350205350213
-4.087201687201688
-4.322495804848747
-4.53302212063822
-4.723498311114411
-4.897411354592672
-5.057411354592672
-5.20555950274082
-5.343490537223579
-5.472522795288095
-5.593734916500216
-5.70802063078593
-5.8161287388940375
-5.91869284145814
-6.016253817067896
-6.1092770728818495
-6.198165961770738
-6.283272344749461
-6.364904997810686
-6.443336370359705
-6.518808068472913
-6.591535341200185
-6.661710779796676
-6.729507389966168
-6.795081160457971
-6.858573223950034
-6.920111685488496
-6.979813178025809
-7.037784192518563
-7.094122220687577
-7.148916741235523
-7.202250074568856
-7.254198126516908
-7.304831037909313
-7.354213753958696
-7.402406525043033
-7.449465348572445
-7.495442360066698
-7.540386180291417
-7.584342224247461
-7.627352976935633
-7.669458240093528
-7.7106953534955895
-7.75109939389963
-7.79070335429567
-7.8295383057519805
-7.8676335438472185
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:52:08) 
-- CODE:
n = int(input("Numero de termos:"))

h = 0
x = 1
y = 0
f = 1

while(h < n):
	pi = 4/1 + y
	y = y + (4/x)*(-1**f)
	x = x + 2
	h = h + 1
	f = f + 1
	print(pi)
	
-- OUTPUT:
4.0
0.0
-1.333333333333333
-2.133333333333333
-2.704761904761904
-3.1492063492063487
-3.512842712842712
-3.8205350205350195
-4.087201687201686
-4.322495804848744
-4.533022120638218
-4.723498311114408
-4.89741135459267
-5.05741135459267
-5.205559502740819
-5.343490537223577
-5.472522795288093
-5.593734916500214
-5.708020630785928
-5.816128738894037
-5.918692841458139
-6.016253817067895
-6.109277072881849
-6.198165961770737
-6.283272344749461
-6.364904997810685
-6.443336370359704
-6.518808068472913
-6.591535341200185
-6.661710779796676
-6.729507389966168
-6.79508116045797
-6.858573223950033
-6.920111685488495
-6.9798131780258075
-7.037784192518561
-7.094122220687575
-7.148916741235521
-7.202250074568854
-7.254198126516906
-7.304831037909311
-7.354213753958694
-7.402406525043032
-7.449465348572444
-7.495442360066697
-7.540386180291415
-7.584342224247459
-7.627352976935631
-7.669458240093526
-7.710695353495588
-7.7510993938996275
-7.790703354295667
-7.829538305751978
-7.867633543847216
-7.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:52:16) 
-- CODE:
n = int(input("Numero de termos:"))

h = 0
x = 1
y = 0
f = 1

while(h < n):
	pi = 4/1 + y
	y = y + (4/x)*(-1**f)
	x = x + 2
	h = h + 1
	f = f + 1
	print(pi)
	
-- OUTPUT:
4.0
0.0
-1.333333333333333
-2.133333333333333
-2.704761904761904
-3.1492063492063487
-3.512842712842712
-3.8205350205350195
-4.087201687201686
-4.322495804848744
-4.533022120638218
-4.723498311114408
-4.89741135459267
-5.05741135459267
-5.205559502740819
-5.343490537223577
-5.472522795288093
-5.593734916500214
-5.708020630785928
-5.816128738894037
-5.918692841458139
-6.016253817067895
-6.109277072881849
-6.198165961770737
-6.283272344749461
-6.364904997810685
-6.443336370359704
-6.518808068472913
-6.591535341200185
-6.661710779796676
-6.729507389966168
-6.79508116045797
-6.858573223950033
-6.920111685488495
-6.9798131780258075
-7.037784192518561
-7.094122220687575
-7.148916741235521
-7.202250074568854
-7.254198126516906
-7.304831037909311
-7.354213753958694
-7.402406525043032
-7.449465348572444
-7.495442360066697
-7.540386180291415
-7.584342224247459
-7.627352976935631
-7.669458240093526
-7.710695353495588
-7.7510993938996275
-7.790703354295667
-7.829538305751978
-7.867633543847216
-7.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:52:35) 
-- CODE:
n = int(input("Numero de termos:"))

h = 0
x = 3
y = 0
f = 1

while(h < n):
	pi = 4/1 + y
	y = y + (4/x)*(-1**f)
	x = x + 2
	h = h + 1
	f = f + 1
	print(pi)
	
-- OUTPUT:
4.0
2.666666666666667
1.8666666666666667
1.295238095238095
0.8507936507936504
0.4871572871572867
0.17946497946497875
-0.08720168720168786
-0.32249580484874674
-0.5330221206382202
-0.7234983111144109
-0.8974113545926716
-1.0574113545926718
-1.2055595027408197
-1.3434905372235786
-1.4725227952880946
-1.5937349165002157
-1.7080206307859296
-1.8161287388940375
-1.9186928414581397
-2.016253817067896
-2.1092770728818495
-2.198165961770738
-2.283272344749461
-2.3649049978106857
-2.443336370359705
-2.5188080684729126
-2.591535341200185
-2.6617107797966764
-2.7295073899661677
-2.795081160457971
-2.8585732239500343
-2.9201116854884956
-2.9798131780258093
-3.037784192518563
-3.094122220687577
-3.1489167412355226
-3.2022500745688562
-3.2541981265169078
-3.304831037909313
-3.354213753958696
-3.402406525043033
-3.4494653485724447
-3.495442360066698
-3.540386180291417
-3.584342224247461
-3.627352976935633
-3.669458240093528
-3.7106953534955895
-3.75109939389963
-3.79070335429567
-3.8295383057519805
-
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:52:45) 
-- CODE:
n = int(input("Numero de termos:"))

h = 0
x = 3
y = 0
f = 1

while(h < n):
	pi = 4/1 + y
	y = y + (4/x)*(-1**f)
	x = x + 2
	h = h + 1
	f = f + 1
	print(pi)
	
-- OUTPUT:
4.0
2.666666666666667
1.8666666666666667
1.295238095238095
0.8507936507936504
0.4871572871572867
0.17946497946497875
-0.08720168720168786
-0.32249580484874674
-0.5330221206382202
-0.7234983111144109
-0.8974113545926716
-1.0574113545926718
-1.2055595027408197
-1.3434905372235786
-1.4725227952880946
-1.5937349165002157
-1.7080206307859296
-1.8161287388940375
-1.9186928414581397
-2.016253817067896
-2.1092770728818495
-2.198165961770738
-2.283272344749461
-2.3649049978106857
-2.443336370359705
-2.5188080684729126
-2.591535341200185
-2.6617107797966764
-2.7295073899661677
-2.795081160457971
-2.8585732239500343
-2.9201116854884956
-2.9798131780258093
-3.037784192518563
-3.094122220687577
-3.1489167412355226
-3.2022500745688562
-3.2541981265169078
-3.304831037909313
-3.354213753958696
-3.402406525043033
-3.4494653485724447
-3.495442360066698
-3.540386180291417
-3.584342224247461
-3.627352976935633
-3.669458240093528
-3.7106953534955895
-3.75109939389963
-3.79070335429567
-3.8295383057519805
-
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:52:57) 
-- CODE:
n = int(input("Numero de termos:"))

h = 0
x = 3
y = 0
f = 1

while(h < n):
	pi = 4/1 + y
	y = y + (4/x)*(-1**f)
	x = x + 2
	h = h + 1
	f = f + 1
	print(pi)
	
-- OUTPUT:
4.0
2.666666666666667
1.8666666666666667
1.295238095238095
0.8507936507936504
0.4871572871572867
0.17946497946497875
-0.08720168720168786
-0.32249580484874674
-0.5330221206382202
-0.7234983111144109
-0.8974113545926716
-1.0574113545926718
-1.2055595027408197
-1.3434905372235786
-1.4725227952880946
-1.5937349165002157
-1.7080206307859296
-1.8161287388940375
-1.9186928414581397
-2.016253817067896
-2.1092770728818495
-2.198165961770738
-2.283272344749461
-2.3649049978106857
-2.443336370359705
-2.5188080684729126
-2.591535341200185
-2.6617107797966764
-2.7295073899661677
-2.795081160457971
-2.8585732239500343
-2.9201116854884956
-2.9798131780258093
-3.037784192518563
-3.094122220687577
-3.1489167412355226
-3.2022500745688562
-3.2541981265169078
-3.304831037909313
-3.354213753958696
-3.402406525043033
-3.4494653485724447
-3.495442360066698
-3.540386180291417
-3.584342224247461
-3.627352976935633
-3.669458240093528
-3.7106953534955895
-3.75109939389963
-3.79070335429567
-3.8295383057519805
-
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:53:05) 
-- CODE:
n = int(input("Numero de termos:"))

h = 0
x = 3
y = 0
f = 1

while(h < n):
	pi = 4/1 + y
	y = y + (4/x)*(-1**f)
	x = x + 2
	h = h + 1
	f = f + 1
	print(pi)
	
-- OUTPUT:
4.0
2.666666666666667
1.8666666666666667
1.295238095238095
0.8507936507936504
0.4871572871572867
0.17946497946497875
-0.08720168720168786
-0.32249580484874674
-0.5330221206382202
-0.7234983111144109
-0.8974113545926716
-1.0574113545926718
-1.2055595027408197
-1.3434905372235786
-1.4725227952880946
-1.5937349165002157
-1.7080206307859296
-1.8161287388940375
-1.9186928414581397
-2.016253817067896
-2.1092770728818495
-2.198165961770738
-2.283272344749461
-2.3649049978106857
-2.443336370359705
-2.5188080684729126
-2.591535341200185
-2.6617107797966764
-2.7295073899661677
-2.795081160457971
-2.8585732239500343
-2.9201116854884956
-2.9798131780258093
-3.037784192518563
-3.094122220687577
-3.1489167412355226
-3.2022500745688562
-3.2541981265169078
-3.304831037909313
-3.354213753958696
-3.402406525043033
-3.4494653485724447
-3.495442360066698
-3.540386180291417
-3.584342224247461
-3.627352976935633
-3.669458240093528
-3.7106953534955895
-3.75109939389963
-3.79070335429567
-3.8295383057519805
-
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:55:30) 
-- CODE:
n = int(input("Numero de termos:"))

h = 0
x = 3
y = 0
f = 1

while(h < n):
	pi = 4/1 + y
	y = y + (4/5)*(-1**f)
	x = x + 2
	h = h + 1
	f = f + 1
	print(round(pi, 8))
	
-- OUTPUT:
4.0
3.2
2.4
1.6
0.8
0.0
-0.8
-1.6
-2.4
-3.2
-4.0
-4.8
-5.6
-6.4
-7.2
-8.0
-8.8
-9.6
-10.4
-11.2
-12.0
-12.8
-13.6
-14.4
-15.2
-16.0
-16.8
-17.6
-18.4
-19.2
-20.0
-20.8
-21.6
-22.4
-23.2
-24.0
-24.8
-25.6
-26.4
-27.2
-28.0
-28.8
-29.6
-30.4
-31.2
-32.0
-32.8
-33.6
-34.4
-35.2
-36.0
-36.8
-37.6
-38.4
-39.2
-40.0
-40.8
-41.6
-42.4
-43.2
-44.0
-44.8
-45.6
-46.4
-47.2
-48.0
-48.8
-49.6
-50.4
-51.2
-52.0
-52.8
-53.6
-54.4
-55.2
-56.0
-56.8
-57.6
-58.4
-59.2
-60.0
-60.8
-61.6
-62.4
-63.2
-64.0
-64.8
-65.6
-66.4
-67.2
-68.0
-68.8
-69.6
-70.4
-71.2
-72.0
-72.8
-73.6
-74.4
-75.2
-76.0
-76.8
-77.6
-78.4
-79.2
-80.0
-80.8
-81.6
-82.4
-83.2
-84.0
-84.8
-85.6
-86.4
-87.2
-88.0
-88.8
-89.6
-90.4
-91.2
-92.0
-92.8
-93.6
-94.4
-95.2
-96.0
-96.8
-97.6
-98.4
-99.2
-100.0
-100.8
-101.6
-102.4
-103.2
-104.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:55:52) 
-- CODE:
n = int(input("Numero de termos:"))

h = 0
x = 3
y = 0
f = 1

while(h < n):
	pi = 4/1 + y
	y = y + (4/x)*(-1**f)
	x = x + 2
	h = h + 1
	f = f + 1
	print(round(y, 8))
	
-- OUTPUT:
-1.33333333
-2.13333333
-2.7047619
-3.14920635
-3.51284271
-3.82053502
-4.08720169
-4.3224958
-4.53302212
-4.72349831
-4.89741135
-5.05741135
-5.2055595
-5.34349054
-5.4725228
-5.59373492
-5.70802063
-5.81612874
-5.91869284
-6.01625382
-6.10927707
-6.19816596
-6.28327234
-6.364905
-6.44333637
-6.51880807
-6.59153534
-6.66171078
-6.72950739
-6.79508116
-6.85857322
-6.92011169
-6.97981318
-7.03778419
-7.09412222
-7.14891674
-7.20225007
-7.25419813
-7.30483104
-7.35421375
-7.40240653
-7.44946535
-7.49544236
-7.54038618
-7.58434222
-7.62735298
-7.66945824
-7.71069535
-7.75109939
-7.79070335
-7.82953831
-7.86763354
-7.90501672
-7.94171397
-7.97775001
-8.01314824
-8.04793084
-8.08211888
-8.11573232
-8.14879017
-8.1813105
-8.2133105
-8.24480656
-8.27581431
-8.30634867
-8.33642385
-8.36605348
-8.39525056
-8.42402754
-8.45239634
-8.48036836
-8.50795457
-8.53516546
-8.56201109
-8.58850116
-8.61464495
-8.6404514
-8.66592911
-8.69108634
-8.71593106
-8.74047094
-8.76471336
-8.78866546
-8.8123341
-8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:57:09) 
-- CODE:
n = int(input("Numero de termos:"))

h = 0
x = 1
y = (4/x)*(-1**f)
f = 2

while(h < n):
	pi = y 
	y = y + (4/x)*(-1**f)
	x = x + 2
	h = h + 1
	f = f + 1
	print(round(y, 8))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    y = (4/x)*(-1**f)
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:57:30) 
-- CODE:
n = int(input("Numero de termos:"))

h = 0
x = 1
f = 2
y = (4/x)*(-1**f)


while(h < n):
	pi = y 
	y = y + (4/x)*(-1**f)
	x = x + 2
	h = h + 1
	f = f + 1
	print(round(y, 8))
	
-- OUTPUT:
-8.0
-9.33333333
-10.13333333
-10.7047619
-11.14920635
-11.51284271
-11.82053502
-12.08720169
-12.3224958
-12.53302212
-12.72349831
-12.89741135
-13.05741135
-13.2055595
-13.34349054
-13.4725228
-13.59373492
-13.70802063
-13.81612874
-13.91869284
-14.01625382
-14.10927707
-14.19816596
-14.28327234
-14.364905
-14.44333637
-14.51880807
-14.59153534
-14.66171078
-14.72950739
-14.79508116
-14.85857322
-14.92011169
-14.97981318
-15.03778419
-15.09412222
-15.14891674
-15.20225007
-15.25419813
-15.30483104
-15.35421375
-15.40240653
-15.44946535
-15.49544236
-15.54038618
-15.58434222
-15.62735298
-15.66945824
-15.71069535
-15.75109939
-15.79070335
-15.82953831
-15.86763354
-15.90501672
-15.94171397
-15.97775001
-16.01314824
-16.04793084
-16.08211888
-16.11573232
-16.14879017
-16.1813105
-16.2133105
-16.24480656
-16.27581431
-16.30634867
-16.33642385
-16.36605348
-16.39525056
-16.42402754
-16.45239634
-16.48036836
-16.50795457
-16.53516546
-16.56201109
-16.58850116
-16.61464495
-16.6404514
-16.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:15:18) 
-- CODE:
n = int(input("Numero de termos:"))

h = 0
x = 3
y = 0
f = 1

while(h < n):
	pi = 4/1 + y
	y = y + (4/x)*(-1**f)
	x = x + 2
	h = h + 1
	f = f + 1
	print(round(y, 8))
	
-- OUTPUT:
-1.33333333
-2.13333333
-2.7047619
-3.14920635
-3.51284271
-3.82053502
-4.08720169
-4.3224958
-4.53302212
-4.72349831
-4.89741135
-5.05741135
-5.2055595
-5.34349054
-5.4725228
-5.59373492
-5.70802063
-5.81612874
-5.91869284
-6.01625382
-6.10927707
-6.19816596
-6.28327234
-6.364905
-6.44333637
-6.51880807
-6.59153534
-6.66171078
-6.72950739
-6.79508116
-6.85857322
-6.92011169
-6.97981318
-7.03778419
-7.09412222
-7.14891674
-7.20225007
-7.25419813
-7.30483104
-7.35421375
-7.40240653
-7.44946535
-7.49544236
-7.54038618
-7.58434222
-7.62735298
-7.66945824
-7.71069535
-7.75109939
-7.79070335
-7.82953831
-7.86763354
-7.90501672
-7.94171397
-7.97775001
-8.01314824
-8.04793084
-8.08211888
-8.11573232
-8.14879017
-8.1813105
-8.2133105
-8.24480656
-8.27581431
-8.30634867
-8.33642385
-8.36605348
-8.39525056
-8.42402754
-8.45239634
-8.48036836
-8.50795457
-8.53516546
-8.56201109
-8.58850116
-8.61464495
-8.6404514
-8.66592911
-8.69108634
-8.71593106
-8.74047094
-8.76471336
-8.78866546
-8.8123341
-8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:15:30) 
-- CODE:
n = int(input("Numero de termos:"))

h = 0
x = 3
y = 0
f = 1

while(h < n):
	pi = 4/1 + y
	y = y + (4/x)*(-1**f)
	x = x + 2
	h = h + 1
	f = f + 1
	print(round(pi, 8))
	
-- OUTPUT:
4.0
2.66666667
1.86666667
1.2952381
0.85079365
0.48715729
0.17946498
-0.08720169
-0.3224958
-0.53302212
-0.72349831
-0.89741135
-1.05741135
-1.2055595
-1.34349054
-1.4725228
-1.59373492
-1.70802063
-1.81612874
-1.91869284
-2.01625382
-2.10927707
-2.19816596
-2.28327234
-2.364905
-2.44333637
-2.51880807
-2.59153534
-2.66171078
-2.72950739
-2.79508116
-2.85857322
-2.92011169
-2.97981318
-3.03778419
-3.09412222
-3.14891674
-3.20225007
-3.25419813
-3.30483104
-3.35421375
-3.40240653
-3.44946535
-3.49544236
-3.54038618
-3.58434222
-3.62735298
-3.66945824
-3.71069535
-3.75109939
-3.79070335
-3.82953831
-3.86763354
-3.90501672
-3.94171397
-3.97775001
-4.01314824
-4.04793084
-4.08211888
-4.11573232
-4.14879017
-4.1813105
-4.2133105
-4.24480656
-4.27581431
-4.30634867
-4.33642385
-4.36605348
-4.39525056
-4.42402754
-4.45239634
-4.48036836
-4.50795457
-4.53516546
-4.56201109
-4.58850116
-4.61464495
-4.6404514
-4.66592911
-4.69108634
-4.71593106
-4.74047094
-4.76471336
-4.78866546
-4.8123341
-4.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:15:45) 
-- CODE:
n = int(input("Numero de termos:"))

h = 0
x = 3
y = 0
f = 1

while(h < n):
	pi = 4/1 + y
	y = y + (4/x)*((-1)**f)
	x = x + 2
	h = h + 1
	f = f + 1
	print(round(pi, 8))
	
-- OUTPUT:
4.0
2.66666667
3.46666667
2.8952381
3.33968254
2.97604618
3.28373848
3.01707182
3.25236593
3.04183962
3.23231581
3.05840277
3.21840277
3.07025462
3.20818565
3.07915339
3.20036552
3.0860798
3.19418791
3.09162381
3.18918478
3.09616153
3.18505042
3.09994403
3.18157669
3.10314531
3.17861701
3.10588974
3.17606518
3.10826857
3.17384234
3.11035027
3.17188874
3.11218724
3.17015826
3.11382023
3.16861475
3.11528142
3.16722947
3.11659656
3.16597927
3.1177865
3.16484533
3.11886831
3.16381213
3.11985609
3.16286684
3.12076158
3.16199869
3.12159465
3.16119861
3.12236366
3.1604589
3.12307572
3.15977297
3.12373693
3.15913516
3.12435256
3.15854059
3.12492714
3.157985
3.12546467
3.15746467
3.12596861
3.15697636
3.12644201
3.1565172
3.12688757
3.15608465
3.12730767
3.15567646
3.12770443
3.15529064
3.12807976
3.15492539
3.12843533
3.15457912
3.12877267
3.15425037
3.12909314
3.15393786
3.12939798
3.15364041
3.12968831
3.15335695
3.12996514
3.15308653
3.13022938
3.15282825
3.13048189
3.15258133
3.13072341
3.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:15:57) 
-- CODE:
n = int(input("Numero de termos:"))

h = 0
x = 3
y = 0
f = 1

while(h < n):
	pi = 4/1 + y
	y = y + (4/x)*((-1)**f)
	x = x + 2
	h = h + 1
	f = f + 1
print(round(pi, 8))
	
-- EXECUTION TIME:
0.134051
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
